--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -284,7 +284,7 @@
       <tr>
         <td>4.</td>
         <td>
-          <a href="http://" target="_blank">Registration form <span>HTML</span></a>
+          <a href="http://studform.vercel.app" target="_blank">Registration form <span>HTML</span></a>
         </td>
       </tr>
     </tbody>
@@ -324,7 +324,7 @@
       </tr>
       <tr>
         <td>Registration form <span>HTML</span></td>
-        <td><a href="http://" target="_blank">Github repository</a></td>
+        <td><a href="http://https://github.com/Arham7432/4th_assignment-SMIT" target="_blank">Github repository</a></td>
       </tr>
     </tbody>
   </table>
