--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -324,7 +324,7 @@
       </tr>
       <tr>
         <td>Registration form <span>HTML</span></td>
-        <td><a href="http://https://github.com/Arham7432/4th_assignment-SMIT" target="_blank">Github repository</a></td>
+        <td><a href="https://github.com/Arham7432/4th_assignment-SMIT" target="_blank">Github repository</a></td>
       </tr>
     </tbody>
   </table>
