--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -46,7 +46,9 @@
     body button {
       justify-content: center;
     }
-
+    body button:active{
+      background-color: #FFF078;
+    }
     table {
       width: 100%;
       border-collapse: collapse;
