--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -97,6 +97,7 @@
     table a:hover {
       text-decoration: underline;
       text-decoration-color: blue;
+      text-decoration-thickness: 3px;
     }
 
     table span {
