--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -290,6 +290,12 @@
           <a href="http://studform.vercel.app" target="_blank">Registration form <span>HTML</span></a>
         </td>
       </tr>
+      <tr>
+        <td>5.</td>
+        <td>
+          <a href="extension.html">Styled Folder<span>CSS</span></a>
+        </td>
+      </tr>
     </tbody>
   </table>
   <br />
