--- a/bookmarks/extension.html
+++ b/bookmarks/extension.html
@@ -113,10 +113,17 @@
         .hoverable:hover {
             text-decoration: underline;
         }
+         img {
+        top: -10px;
+        width: 81px;
+        position: relative;
+        margin-left: -9px;
+      }
     </style>
 </head>
 
 <body>
+    <img src="img/smit.png" alt="SMIT img" />
     <h1><u>Assignment Five</u></h1>
     <h2>Add CSS to All previous assignments</h2>
     <table>
