some little big fixes🤏

--- a/bookmarks/extension.html
+++ b/bookmarks/extension.html
@@ -136,22 +136,22 @@
         <tbody>
             <tr>
                 <td> 1.</td>
-                <td class="hoverable"><a href="">Restaurant Website</a><span style="color: #717171; font-weight: 600;">
+                <td class="hoverable"><a href="https://skhanakhandani.vercel.app">Restaurant Website</a><span style="color: #717171; font-weight: 600;">
                         CSS</span></td>
             </tr>
             <tr>
                 <td> 2.</td>
-                <td class="hoverable"><a href="">Tables Assignment</a><span style="color: #717171; font-weight: 600;">
+                <td class="hoverable"><a href="https://stables-xi.vercel.app">Tables Assignment</a><span style="color: #717171; font-weight: 600;">
                         CSS</span></td>
             </tr>
             <tr>
                 <td> 3.</td>
-                <td class="hoverable"><a href="">Static chess board</a><span style="color: #717171; font-weight: 600;">
+                <td class="hoverable"><a href="https://schessmessed.vercel.app">Static chess board</a><span style="color: #717171; font-weight: 600;">
                         CSS</span></td>
             </tr>
             <tr>
                 <td> 4.</td>
-                <td class="hoverable"><a href="">Registration form</a><span style="color: #717171; font-weight: 600;">
+                <td class="hoverable"><a href="https://sstudform.vercel.app">Registration form</a><span style="color: #717171; font-weight: 600;">
                         CSS</span></td>
             </tr>
         </tbody>
