some little big fixes🤏

--- a/bookmarks/extension.html
+++ b/bookmarks/extension.html
@@ -119,6 +119,10 @@
         position: relative;
         margin-left: -9px;
       }
+         h3 {
+            font-size: 31px;
+            line-height: 0.1;
+        }
     </style>
 </head>
 
@@ -153,6 +157,36 @@
                 <td> 4.</td>
                 <td class="hoverable"><a href="https://sstudform.vercel.app" target="_blank">Registration form</a><span style="color: #717171; font-weight: 600;">
                         CSS</span></td>
+            </tr>
+        </tbody>
+    </table>
+    <h3>source codes:</h3>
+        <tbody>
+            <tr>
+                <td>Restaurant Website <span style="color: #717171; font-weight: 600;">
+                        CSS</span></td>
+                <td class="hoverable"><a href="https://github.com/Arham7432/1st_assignment-styled"
+                        target="_blank">Github repository</a>
+                </td>
+            </tr>
+            <tr>
+                <td>Tables Assignment <span style="color: #717171; font-weight: 600;">
+                        CSS</span></td>
+                <td class="hoverable"><a href="https://github.com/Arham7432/2nd_assignment-styled"
+                        target="_blank">Github repository</a></td>
+            </tr>
+            <tr>
+                <td>Static chess board <span style="color: #717171; font-weight: 600;">
+                        CSS</span></td>
+                <td class="hoverable"><a href="https://github.com/Arham7432/3rd_assignment-styled"
+                        target="_blank">Github repository</a>
+                </td>
+            </tr>
+            <tr>
+                <td>Registration form <span style="color: #717171; font-weight: 600;">
+                        CSS</span></td>
+                <td class="hoverable"><a href="https://github.com/Arham7432/4th_assignment-styled"
+                        target="_blank">Github repository</a></td>
             </tr>
         </tbody>
     </table>
