some little big fixes🤏

--- a/bookmarks/extension.html
+++ b/bookmarks/extension.html
@@ -162,6 +162,12 @@
     </table>
     <h3>source codes:</h3>
     <table>
+         <thead>
+            <tr>
+                <th>Assignments</th>
+                <th>Source</th>
+            </tr>
+        </thead><br>
         <tbody>
             <tr>
                 <td>Restaurant Website <span style="color: #717171; font-weight: 600;">
