some little big fixes🤏

--- a/bookmarks/extension.html
+++ b/bookmarks/extension.html
@@ -160,7 +160,7 @@
                         CSS</span></td>
             </tr>
         </tbody>
-    </table>
+    </table><br>
     <h3>source codes:</h3>
     <table>
          <thead>
@@ -168,7 +168,7 @@
                 <th>Assignments</th>
                 <th>Source</th>
             </tr>
-        </thead><br>
+        </thead>
         <tbody>
             <tr>
                 <td>Restaurant Website <span style="color: #717171; font-weight: 600;">
