--- a/bookmarks/extension.html
+++ b/bookmarks/extension.html
@@ -19,14 +19,14 @@
         }
 
         ::-webkit-scrollbar-thumb {
-            background: rgba(255, 221, 0, 0.404);
+            background: #222;
             /* Pink color for thumb */
             border-radius: 10px;
             border: 3px solid #f9f9f9;
         }
 
         ::-webkit-scrollbar-thumb:hover {
-            background: #fd0;
+            background: #222;
         }
 
         body {
