--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -296,6 +296,12 @@
           <a href="extension.html">Styled Folder <span>CSS</span></a>
         </td>
       </tr>
+      <tr>
+        <td>5.</td>
+        <td>
+          <a href="extension2.html">Four Tasks <span>CSS</span></a>
+        </td>
+      </tr>
     </tbody>
   </table>
   <br />
