some little big fixes🤏

--- a/bookmarks/extension2.html
+++ b/bookmarks/extension2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 6 | The Five Tasks</title>
+    <title>Assignment 6 | The Four Tasks</title>
      <link rel="shortcut icon" href="img/fav.ico" type="image/x-icon">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
