some little big fixes🤏

--- a/bookmarks/all_tasks/task1.html
+++ b/bookmarks/all_tasks/task1.html
@@ -269,7 +269,7 @@
         <div class="btn-cont">
             <div class="prev">
                 <form action="">
-                    <a href="">
+                    <a href="../extension2.html">
                         <span></span>
                         <span></span>
                         <span></span>
