some little big fixes🤏

--- a/bookmarks/extension2.html
+++ b/bookmarks/extension2.html
@@ -130,8 +130,8 @@
 
 <body>
     <img src="https://smitbookmarks.vercel.app/img/smit.png" alt="SMIT img" />
-    <h1><u>Assignment Five</u></h1>
-    <h2>Add CSS to All previous assignments</h2>
+    <h1><u>Assignment Six</u></h1>
+    <h2>Four Tasks of CSS</h2>
     <h3>previews:</h3>
     <table>
         <thead>
