some little big fixes🤏

--- a/bookmarks/all_tasks/task2.html
+++ b/bookmarks/all_tasks/task2.html
@@ -276,7 +276,7 @@
         <div class="btn-cont">
             <div class="prev">
                 <form action="">
-                    <a href="index.html">
+                    <a href="task1.html">
                         <span></span>
                         <span></span>
                         <span></span>
