--- a/bookmarks/extension2.html
+++ b/bookmarks/extension2.html
@@ -167,7 +167,7 @@
             </tr>
         </tbody>
     </table><br>
-    <!-- <h3>source codes:</h3>
+     <h3>source codes:</h3>
     <table>
         <thead>
             <tr>
@@ -203,7 +203,7 @@
                         target="_blank">Github repository</a></td>
             </tr>
         </tbody>
-    </table> -->
+    </table>
     <a href="https://smitbookmarks.vercel.app" class="back-button">Back</a>
 </body>
 
