--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -302,6 +302,12 @@
           <a href="extension2.html">Four Tasks <span>CSS</span></a>
         </td>
       </tr>
+      <tr>
+        <td>7.</td>
+        <td>
+          <a href="https://saltnpeppers.vercel.app">Salt'n pepper clone <span>CSS</span></a>
+        </td>
+      </tr>
     </tbody>
   </table>
   <br />
@@ -340,6 +346,10 @@
       <tr>
         <td>Registration form <span>HTML</span></td>
         <td><a href="https://github.com/Arham7432/4th_assignment-SMIT" target="_blank">Github repository</a></td>
+      </tr>
+       <tr>
+        <td>Salt'n pepper clone <span>CSS</span></td>
+        <td><a href="https://github.com/Arham7432/7th_assignment-SMIT" target="_blank">Github repository</a></td>
       </tr>
     </tbody>
   </table>
