--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -305,7 +305,7 @@
       <tr>
         <td>7.</td>
         <td>
-          <a href="https://saltnpeppers.vercel.app">Salt'n pepper clone <span>CSS</span></a>
+          <a href="https://saltnpeppers.vercel.app" target="_blank">Salt'n pepper clone <span>CSS</span></a>
         </td>
       </tr>
     </tbody>
