--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -308,6 +308,12 @@
           <a href="https://saltnpeppers.vercel.app" target="_blank">Salt'n pepper clone <span>CSS</span></a>
         </td>
       </tr>
+      <tr>
+        <td>9.</td>
+        <td>
+          <a href="https://fbcloned.vercel.app" target="_blank">Facebook login clone <span>CSS</span></a>
+        </td>
+      </tr>
     </tbody>
   </table>
   <br />
@@ -350,6 +356,10 @@
        <tr>
         <td>Salt'n pepper clone <span>CSS</span></td>
         <td><a href="https://github.com/Arham7432/7th_assignment-SMIT" target="_blank">Github repository</a></td>
+      </tr>
+       <tr>
+        <td>Facebook login clone <span>CSS</span></td>
+        <td><a href="https://github.com/Arham7432/facebook_clone" target="_blank">Github repository</a></td>
       </tr>
     </tbody>
   </table>
