some little big fixes🤏

--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -309,6 +309,12 @@
         </td>
       </tr>
       <tr>
+        <td>8.</td>
+        <td>
+          <a href="https://teslacloned.vercel.app" target="_blank">Tesla clone <span>CSS</span></a>
+        </td>
+      </tr>
+      <tr>
         <td>9.</td>
         <td>
           <a href="https://fbcloned.vercel.app" target="_blank">Facebook login clone <span>CSS</span></a>
@@ -358,8 +364,12 @@
         <td><a href="https://github.com/Arham7432/7th_assignment-SMIT" target="_blank">Github repository</a></td>
       </tr>
        <tr>
+        <td>Tesla clone <span>CSS</span></td>
+        <td><a href="https://github.com/Arham7432/8th_assignment-SMIT" target="_blank">Github repository</a></td>
+      </tr>
+       <tr>
         <td>Facebook login clone <span>CSS</span></td>
-        <td><a href="https://github.com/Arham7432/facebook_clone" target="_blank">Github repository</a></td>
+        <td><a href="https://github.com/Arham7432/9th_assignment-SMIT" target="_blank">Github repository</a></td>
       </tr>
     </tbody>
   </table>
