Updated with love 🧠

--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -293,13 +294,13 @@
       <tr>
         <td>5.</td>
         <td>
-          <a href="extension.html">Styled Folder <span>CSS</span></a>
+          <a href="extension.html">Styled Folder <span>CSS</span></a><img style="position: relative;top: 2px; width: 18px; margin-left: 6px;" src="folder.svg">
         </td>
       </tr>
       <tr>
         <td>6.</td>
         <td>
-          <a href="extension2.html">Four Tasks <span>CSS</span></a>
+          <a href="extension2.html">Four Tasks <span>CSS</span></a><img style="position: relative;top: 2px; width: 18px; margin-left: 6px;" src="folder.svg">
         </td>
       </tr>
       <tr>
