Updated with love🧠

--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -378,6 +378,10 @@
     <td>Facebook login clone <span>CSS</span></td>
     <td><a href="https://github.com/Arham7432/9th_assignment-SMIT" target="_blank">Github repository</a></td>
   </tr> 
+      <tr>
+    <td>Zomato clone <span>CSS</span></td>
+    <td><a href="https://github.com/Arham7432/11th-assignment-SMIT" target="_blank">Github repository</a></td>
+  </tr> 
     </tbody>
   </table>
   <br /><br />
