Updated with love 🧠

--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -327,6 +327,12 @@
             <a href="https://zomatocloned.vercel.app" target="_blank">Zomato clone <span>CSS</span></a>
         </td>
     </tr> 
+       <tr>
+        <td>11.</td>
+        <td>
+            <a href="" target="_blank">Discord clone <span>CSS</span></a>
+        </td>
+    </tr> 
     </tbody>
   </table>
   <br />
@@ -381,7 +387,11 @@
       <tr>
     <td>Zomato clone <span>CSS</span></td>
     <td><a href="https://github.com/Arham7432/11th-assignment-SMIT" target="_blank">Github repository</a></td>
-  </tr> 
+  </tr>
+    <tr>
+    <td>Discord clone <span>CSS</span></td>
+    <td><a href="https://github.com/Arham7432/12th-assignment-SMIT" target="_blank">Github repository</a></td>
+  </tr>
     </tbody>
   </table>
   <br /><br />
