--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -330,7 +330,7 @@
        <tr>
         <td>11.</td>
         <td>
-            <a href="" target="_blank">Discord clone <span>CSS</span></a>
+            <a href="https://disccloned.vercel.app" target="_blank">Discord clone <span>CSS</span></a>
         </td>
     </tr> 
     </tbody>
