--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -332,7 +332,13 @@
         <td>
             <a href="https://disccloned.vercel.app" target="_blank">Discord clone <span>CSS</span></a>
         </td>
-    </tr> 
+    </tr>
+        <tr>
+        <td>11.</td>
+        <td>
+            <a href="https://positivecloned.vercel.app" target="_blank">Positivus clone <span>Hackathon</span></a>
+        </td>
+    </tr>
     </tbody>
   </table>
   <br />
@@ -391,6 +397,10 @@
     <tr>
     <td>Discord clone <span>CSS</span></td>
     <td><a href="https://github.com/Arham7432/12th-assignment-SMIT" target="_blank">Github repository</a></td>
+  </tr>
+    <tr>
+    <td>Positivus clone <span>Hackathon</span></td>
+    <td><a href="https://github.com/Arham7432/positivus_clone" target="_blank">Github repository</a></td>
   </tr>
     </tbody>
   </table>
