--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -339,6 +339,12 @@
             <a href="https://positivecloned.vercel.app" target="_blank">Positivus clone <span>Hackathon</span></a>
         </td>
     </tr>
+       <tr>
+        <td>13.</td>
+        <td>
+            <a href="https://fightanim.vercel.app" target="_blank">Fighting animation <span>Js</span></a>
+        </td>
+    </tr>
     </tbody>
   </table>
   <br />
@@ -401,6 +407,10 @@
     <tr>
     <td>Positivus clone <span>Hackathon</span></td>
     <td><a href="https://github.com/Arham7432/positivus_clone" target="_blank">Github repository</a></td>
+  </tr>
+      <tr>
+    <td>Fighting animation <span>Js</span></td>
+    <td><a href="https://github.com/Arham7432/arcadeFightAnimation_JS" target="_blank">Github repository</a></td>
   </tr>
     </tbody>
   </table>
