--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -342,7 +342,7 @@
        <tr>
         <td>13.</td>
         <td>
-            <a href="https://fightanim.vercel.app" target="_blank">Fighting animation <span>Js</span></a>
+            <a href="https://fightanim.vercel.app" target="_blank">Fighting animation <span>JS</span></a>
         </td>
     </tr>
     </tbody>
@@ -409,7 +409,7 @@
     <td><a href="https://github.com/Arham7432/positivus_clone" target="_blank">Github repository</a></td>
   </tr>
       <tr>
-    <td>Fighting animation <span>Js</span></td>
+    <td>Fighting animation <span>JS</span></td>
     <td><a href="https://github.com/Arham7432/arcadeFightAnimation_JS" target="_blank">Github repository</a></td>
   </tr>
     </tbody>
