--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -345,6 +345,12 @@
             <a href="https://fightanim.vercel.app" target="_blank">Fighting animation <span>JS</span></a>
         </td>
     </tr>
+       <tr>
+        <td>14.</td>
+        <td>
+            <a href="https://olxcloned.vercel.app" target="_blank">OLX clone <span>JS</span></a>
+        </td>
+    </tr>
     </tbody>
   </table>
   <br />
@@ -411,6 +417,10 @@
       <tr>
     <td>Fighting animation <span>JS</span></td>
     <td><a href="https://github.com/Arham7432/arcadeFightAnimation_JS" target="_blank">Github repository</a></td>
+  </tr>
+      <tr>
+    <td>OLX clone <span>JS</span></td>
+    <td><a href="https://github.com/Arham7432/OLXclone_JS" target="_blank">Github repository</a></td>
   </tr>
     </tbody>
   </table>
