--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -351,6 +351,24 @@
             <a href="https://olxcloned.vercel.app" target="_blank">OLX clone <span>JS</span></a>
         </td>
     </tr>
+      <tr>
+        <td>14.</td>
+        <td>
+            <a href="https://outfittersclone.vercel.app/" target="_blank">Outfitters clone <span>JS</span></a>
+        </td>
+    </tr>
+      <tr>
+        <td>15.</td>
+        <td>
+            <a href=https://examiner-io.vercel.app/" target="_blank">Quiz App <span>JS</span></a>
+        </td>
+    </tr>
+      <tr>
+        <td>16.</td>
+        <td>
+            <a href="https://climate-io.vercel.app/" target="_blank">Weather application <span>JS</span></a>
+        </td>
+    </tr>
     </tbody>
   </table>
   <br />
@@ -422,6 +440,19 @@
     <td>OLX clone <span>JS</span></td>
     <td><a href="https://github.com/Arham7432/OLXclone_JS" target="_blank">Github repository</a></td>
   </tr>
+      <tr>
+    <td>Outfitters clone <span>JS</span></td>
+    <td><a href="https://github.com/Arham7432/OutfittersClone_JS" target="_blank">Github repository</a></td>
+  </tr>
+      <tr>
+    <td>Quiz app <span>JS</span></td>
+    <td><a href="https://github.com/Arham7432/examiner.io" target="_blank">Github repository</a></td>
+  </tr>
+       <tr>
+    <td>Weather application <span>JS</span></td>
+    <td><a href="https://github.com/Arham7432/climate.io" target="_blank">Github repository</a></td>
+  </tr>
+   
     </tbody>
   </table>
   <br /><br />
