--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -360,7 +360,7 @@
       <tr>
         <td>15.</td>
         <td>
-            <a href=https://examiner-io.vercel.app/" target="_blank">Quiz App <span>JS</span></a>
+            <a href="https://examiner-io.vercel.app/" target="_blank">Quiz App <span>JS</span></a>
         </td>
     </tr>
       <tr>
