--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -461,7 +461,7 @@
     we can code together!
   </h3>
   <div class="container">
-    <a href="https://github.com/Arham7432?tab=repositories" target="_blank"><button class="button">Follow</button></a>
+    <a href="https://github.com/async-arham?tab=repositories" target="_blank"><button class="button">Follow</button></a>
   </div>
 </body>
 <script>
@@ -477,3 +477,4 @@
 </script>
 
 </html>
+
